[package]
name = "truebner-smt100"
description = "Drivers for the TRUEBNER SMT100 Soil Moisture Sensor"
version = "0.2.1"
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["sensor", "soil-moisture", "water-content", "temperature", "modbus"]
categories = ["hardware-support", "network-programming", "asynchronous"]
homepage = "https://github.com/slowtec/truebner-smt100"
repository = "https://github.com/slowtec/truebner-smt100"
edition = "2018"

[dependencies]
futures = { version = "0.1", optional = true }
log = { version = "~0.4", default-features = false }
serialport = { version = "3", default-features = false, optional = true }
tokio = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-modbus = { version = "~0.3.2", default-features = false, features = ["rtu"], optional = true }
tokio-serial = { version = "3", default-features = false, optional = true }

[dev-dependencies]
chrono = "~0.4"
env_logger = "~0.6"
stream-cancel = "~0.4"

[features]
default = ["tokio-modbus-rtu"]
tokio-modbus-rtu = ["std", "modbus", "rtu", "tokio-modbus", "tokio", "tokio-core", "tokio-io", "tokio-serial"]
tokio-mock = ["tokio"]
modbus = []
rtu = ["serialport"]
std = ["futures"]

[badges]
travis-ci = { repository = "slowtec/truebner-smt100" }
