[package]
name = "truebner-smt100"
description = "Drivers for the TRUEBNER SMT100 Soil Moisture Sensor"
version = "0.2.1"
authors = ["slowtec GmbH <post@slowtec.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["sensor", "soil-moisture", "water-content", "temperature", "modbus"]
categories = ["hardware-support", "network-programming", "asynchronous"]
homepage = "https://github.com/slowtec/truebner-smt100"
repository = "https://github.com/slowtec/truebner-smt100"
edition = "2018"

[dependencies]
async-trait = "0.1"
log = { version = "0.4", default-features = false }
serialport = { version = "3", default-features = false, optional = true }
tokio = { version = "0.2", default-features = false, features = ["time"], optional = true }
tokio-modbus = { version = "0.4", default-features = false, features = ["rtu"], optional = true }
tokio-serial = { version = "4", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
stream-cancel = "0.6"

[dev-dependencies.tokio]
features = ["time", "macros", "rt-core", "stream"]

[features]
default = ["tokio-modbus-rtu"]
tokio-modbus-rtu = ["std", "modbus", "rtu", "tokio-modbus", "tokio", "tokio-serial"]
tokio-mock = ["tokio"]
modbus = []
rtu = ["serialport"]
std = []

[badges]
travis-ci = { repository = "slowtec/truebner-smt100" }
